--- a/main.html
+++ b/main.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Car Insurance Registration Form</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <form method="post">
+        <label for="name">Name*</label>
+        <input type="text" id="name" name="name" required>
 
+        <label for="email">Email*</label>
+        <input type="email" id="email" name="email" required>
+
+        <label>Gender*</label><br>
+        <input type="radio" id="male" name="gender" value="male" required>
+        <label for="male">Male</label><br>
+        <input type="radio" id="female" name="gender" value="female" required>
+        <label for="female">Female</label><br>
+        <input type="radio" id="other" name="gender" value="other" required>
+        <label for="other">Other</label><br>
+
+        <label for="cars">Car Brands</label>
+        <select id="cars" name="car_brands">
+            <option value="bmw">BMW</option>
+            <option value="audi">Audi</option>
+            <option value="mercedez">Mercedez</option>
+        </select>
+
+        <label for="carage">Car Age*</label>
+        <input type="number" id="carage" name="car_age" required>
+
+        <label for="dop">Date of Purchase(dop)*</label>
+        <input type="date" id="dop" name="date_of_purchase" required>
+
+        <label for="password">Password*</label>
+        <input type="password" id="password" name="password" required>
+
+        <button type="submit">Submit</button>
+    </form>
 </body>
-
 </html>
